# job-hunter-pipeline

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  async_fetch.py  board_playwright.py  cold_mail_drafter.py  cutshort_nextdata.py  dedup_keys.py  docker-compose.yml  experience.py  fetch_jobs.py  find_contacts.py  fly.toml  fresher_filter.py  geo.py  job_quality.py  link_check.py  llm_filter.py  llm_http.py  llm_jd.py  metrics.md  morning.py  morning_summary.py  naukri_api.py  nkparam_refresh.py  outreach_log.py  outreach_run.py  pipeline.py  preferences.py  preferences.yaml.example  profile_config.py  pyproject.toml  referral_drafter.py  render.yaml  requirements-web.txt  score.py  (+8 more)
.github/workflows/: ci.yml  refresh.yml
docs/: PROVEN_METHODS.md  RESUME_TUNER.md
scripts/: harvest_nkparam.py  probe_boards.py  test_proven_fetchers.py
templates/: dashboard.html  settings.html  setup.html
templates/partials/: rows.html  stats.html
tests/: test_dedup_keys.py  test_experience.py  test_fetch_metrics.py  test_free_sources.py  test_job_quality.py  test_link_check.py  test_llm_efficiency.py  test_pipeline.py  test_score.py  test_search_budget.py  test_sheets_blacklist.py  test_staffing_filter.py  test_tracker_store.py  test_web.py  test_web_settings.py  test_web_ui.py
